# Team-183

./: .env.example  .flake8  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
instance/: config.py
src/: __init__.py  app.py  settings.py
src/api/v1/: __init__.py
src/api/v1/models/: cart_model.py  categories_model.py  product_model.py  sale_model.py  user_model.py
src/api/v1/utils/: cartdto.py  cdto.py  decorators.py  helpers.py  mail_services.py  pdto.py  sdto.py  udto.py  validators.py
src/api/v1/views/: carts_views.py  categories_views.py  product_views.py  products_views.py  sale_views.py  sales_views.py  users_views.py
src/tests/v1/: base.py  helpers.py  test_config.py
